<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFoodDescriptionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_green"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llForNested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvFoodDetailsFoodName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/food_name"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvFoodDetailsFoodBrandName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/food_brand_name"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNutritionTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/llNutritionTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutritionl_facts"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvServingSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serving_size"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvAmountByHundredGram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_per_100g"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvCaloriesAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvProteinAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvTotalCarbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvDiatryFiber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvSugars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />


            <TextView
                android:id="@+id/tvTotalFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvFatSaturated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvFatTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvFatPolyunsaturated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvFatMonounsaturated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_list"
                android:layout_marginStart="@dimen/margin_list"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvCholesterol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colesterol_amount"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvHeaderRecyclerViewVitamins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vitamins"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvVitamins"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvHeaderRecyclerViewMinerals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minerals"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvMinerales"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutrition_grade"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/based_on_a_2000_calorie_diat"
                android:textSize="@dimen/text_size" />


        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
