<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_draw_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/overview_coordinator_layout_draw_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarDrawActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"
                android:elevation="4dp"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                app:layout_scrollFlags="enterAlways|scroll" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/llDrawViewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            tools:context=".screens.draw.DrawActivity">


            <TextView
                android:id="@+id/drawViewHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/vSpaceDivider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <workshop.g_s.myfitnessnutritiondairy.screens.draw.DrawView
                android:id="@+id/vDrawView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="6" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNewNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_note"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <workshop.g_s.myfitnessnutritiondairy.screens.draw.ColorPickerView
                android:id="@+id/vColorPickers"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_draw_activity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />
    />/ app:menu="@menu/layout_main_drawer"/>
</android.support.v4.widget.DrawerLayout>







































